2023/day-two/src/bin/snapshots/part_one__test__snapshot_game_parse-3.snap
---
source: day-two/src/bin/part_one.rs
expression: "Game::parse(input_3)"
---
Ok(
    (
        "",
        Game {
            game_num: 3,
            hands: [
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 8,
                            color: Green,
                        },
                        ColorCount {
                            count: 6,
                            color: Blue,
                        },
                        ColorCount {
                            count: 20,
                            color: Red,
                        },
                    ],
                },
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 5,
                            color: Blue,
                        },
                        ColorCount {
                            count: 4,
                            color: Red,
                        },
                        ColorCount {
                            count: 13,
                            color: Green,
                        },
                    ],
                },
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 5,
                            color: Green,
                        },
                        ColorCount {
                            count: 1,
                            color: Red,
                        },
                    ],
                },
            ],
        },
    ),
)
